# ocaml-weechat

./: .gitignore  README.md  dune-project  weechat.opam
example/: .gitignore  Makefile  description.c  dune  plugin.c  plugin.ml  test.ml
example/src/: bindings.c  bindings.h  dune  plugin.ml
src/: bindings.h  bindings.ml  bindings_buffers.c  bindings_commands.c  bindings_extra.c  bindings_hooks.c  dune  weechat.ml
src/api/: bindings.h  bindings_buffers.c  bindings_display.c  bindings_extra.c  bindings_hooks.c  dune  weechat.ml
src/plugin/: dune  plugin_boilerplate.c  weechat_plugin.ml
